--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.example</groupId>
     <artifactId>One-PrimeiroApp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>AppMusic</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
