--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ target/classes/.idea/jarRepositories.xml
 target/classes/.idea/misc.xml
 target/classes/.idea/uiDesigner.xml
 target/classes/.idea/vcs.xml
+DesafioViaCEP/.idea/misc.xml
+DesafioViaCEP/.idea/modules.xml
+DesafioViaCEP/.idea/vcs.xml
